--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -20,10 +20,12 @@ p, ul, ol, table, pre, dl {
 
 h1, h2, h3 {
   line-height:1.1;
+  color:#06F626;
 }
 
 h1 {
   font-size:28px;
+  color:#06F626;
 }
 
 h2 {
