--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -106,6 +106,12 @@ img {
   max-width:100%;
 }
 
+.imgred {
+  max-width:100%;
+  border-radius:100%;
+  border:5px solid #666;
+}
+
 kbd {
   background-color: #fafbfc;
   border: 1px solid #c6cbd1;
