--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -107,9 +107,18 @@ img {
 }
 
 .imgred {
-  max-width:100%;
+  max-width:70%;
   border-radius:100%;
   border:5px solid #666;
+}
+
+.minilogo {
+width: 16px; 
+height: 16px; 
+display: inline-block; 
+fill: #edeaf0; 
+padding-right: 5px; 
+vertical-align: text-top;
 }
 
 kbd {
@@ -140,13 +149,12 @@ ul.downloads {
   background: #f4f4f4;
   border-radius:5px;
   border:1px solid #e0e0e0;
-  width:270px;
+  width:80px;
 }
 
 .downloads li {
   width:89px;
   float:left;
-  border-right:1px solid #e0e0e0;
   height:40px;
 }
 
@@ -189,7 +197,6 @@ strong {
 
 .downloads a strong {
   font-size:14px;
-  display:block;
   color:#222;
 }
 
