--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,27 +15,25 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1 style="text-align:center;"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
-          <img class="imgred" src="{{site.logo | relative_url}}" alt="Logo" />
+	<p style="text-align:center;"><img class="imgred" src="{{site.logo | relative_url}}" alt="Logo" /></p>
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <p style="text-align:center;">{{ site.description | default: site.github.project_tagline }}</p>
 	<!-- <a href="{{ site.github.owner_url }}"><img class="minilogo" src="/assets/img/githubico.svg"></a> -->
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
+	<center>
+	<div class="linker">
+          <a href="{{ site.github.repository_url }}"><strong>GitHub</strong></a>
+	</div>
+	</center>
 
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
-
-        {% if site.show_downloads %}
-        <ul class="downloads">
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-        </ul>
-        {% endif %}
+	<!-- {% if site.show_downloads %}
+	<ul class="downloads">
+          <li><a href="{{ site.github.repository_url }}"><strong>GitHub</strong></a></li>
+	</ul>
+	{% endif %} -->
       </header>
       <section>
 
