--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 	<!-- <a href="{{ site.github.owner_url }}"><img class="minilogo" src="/assets/img/githubico.svg"></a> -->
 	<center>
 	<div class="linker">
-          <a href="{{ site.github.repository_url }}"><strong color="#000000">GitHub</strong></a>
+          <a href="{{ site.github.owner_url }}"><strong style="color:black;">GitHub</strong></a>
 	</div>
 	</center>
 
