--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -307,3 +307,25 @@ footer {
     color:#444;
   }
 }
+
+.divclickable {
+        font-size: 5em;
+        background-color: #a8a8a8;
+        color: white;
+        width: 8em;
+        height: 2em;
+        line-height: 2;
+        text-align: center;
+        font-family: Helvetica, Arial, sans-serif;
+        font-weight: bold;
+        cursor: pointer;
+        position: relative;
+      }
+.clickable {
+	position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: 1;
+}
