--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -309,18 +309,20 @@ footer {
 }
 
 .divclickable {
-        font-size: 5em;
-        background-color: #a8a8a8;
-        color: white;
-        width: 8em;
-        height: 2em;
+	border-style: groove;
+	border-radius: 5px;
+	border: 2px solid black;
+        background-color: #303449;
         line-height: 2;
-        text-align: center;
-        font-family: Helvetica, Arial, sans-serif;
         font-weight: bold;
+	color:#EDEFD9;
         cursor: pointer;
         position: relative;
+	padding-left: 5px;
       }
+.divclickable:hover{
+        background-color: #7b8399;
+}
 .clickable {
 	position: absolute;
         width: 100%;
@@ -328,4 +330,13 @@ footer {
         top: 0;
         left: 0;
         z-index: 1;
-}
+      }
+.text-indiv {
+        p {
+          line-height: 1.5;
+          margin: 0;
+	  font: 10px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	  color:#EDEFD9;
+
+        }
+      }
