--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -339,4 +339,9 @@ footer {
 	  color:#EDEFD9;
 
         }
-      }
+}
+.language-plaintext{
+	color: #f39500;
+	background-color: #e2e2e4;
+	font: "Lucida Console", "Menlo", "Monaco", "Courier", monospace;
+}
